Servidor/src/interprete/PSParser.java
package interprete;

import java.util.Map;
  import java.util.HashMap;
  import java.util.LinkedList;
 


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;

@SuppressWarnings("all")
public class PSParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGNMENT", "AVERAGE", "Add", 
		"And", "Assert", "Assign", "BLOCK", "BUY", "Bool", "CBrace", "CBracket", 
		"CParen", "Colon", "Comma", "Comment", "DEVIATION", "Def", "Digit", "Divide", 
		"EXP", "Else", "EndIf", "Equals", "Excl", "FUNC_CALL", "For", "GT", "GTEquals", 
		"HISTORY", "IF", "Identifier", "If", "In", "Int", "LT", "LTEquals", "Modulus", 
		"Multiply", "NEGATE", "NEGATION", "NEquals", "Null", "Number", "OBrace", 
		"OBracket", "OParen", "Or", "Pow", "Print", "Println", "QMark", "Return", 
		"SColon", "SELL", "STATEMENTS", "Size", "Space", "Subtract", "Then", "To", 
		"UNARY_MIN", "While", "'BUY'", "'Boolean'", "'ENDVAR'", "'Float'", "'HISTORY'", 
		"'SELL'", "'VAR'", "'avg'", "'dev'"
	};
	public static final int EOF=-1;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int ASSIGNMENT=4;
	public static final int AVERAGE=5;
	public static final int Add=6;
	public static final int And=7;
	public static final int Assert=8;
	public static final int Assign=9;
	public static final int BLOCK=10;
	public static final int BUY=11;
	public static final int Bool=12;
	public static final int CBrace=13;
	public static final int CBracket=14;
	public static final int CParen=15;
	public static final int Colon=16;
	public static final int Comma=17;
	public static final int Comment=18;
	public static final int DEVIATION=19;
	public static final int Def=20;
	public static final int Digit=21;
	public static final int Divide=22;
	public static final int EXP=23;
	public static final int Else=24;
	public static final int EndIf=25;
	public static final int Equals=26;
	public static final int Excl=27;
	public static final int FUNC_CALL=28;
	public static final int For=29;
	public static final int GT=30;
	public static final int GTEquals=31;
	public static final int HISTORY=32;
	public static final int IF=33;
	public static final int Identifier=34;
	public static final int If=35;
	public static final int In=36;
	public static final int Int=37;
	public static final int LT=38;
	public static final int LTEquals=39;
	public static final int Modulus=40;
	public static final int Multiply=41;
	public static final int NEGATE=42;
	public static final int NEGATION=43;
	public static final int NEquals=44;
	public static final int Null=45;
	public static final int Number=46;
	public static final int OBrace=47;
	public static final int OBracket=48;
	public static final int OParen=49;
	public static final int Or=50;
	public static final int Pow=51;
	public static final int Print=52;
	public static final int Println=53;
	public static final int QMark=54;
	public static final int Return=55;
	public static final int SColon=56;
	public static final int SELL=57;
	public static final int STATEMENTS=58;
	public static final int Size=59;
	public static final int Space=60;
	public static final int Subtract=61;
	public static final int Then=62;
	public static final int To=63;
	public static final int UNARY_MIN=64;
	public static final int While=65;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public PSParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public PSParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return PSParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/mauriciomorinelli/Desktop/ProyectosEclipse/PlainStock/src/PS.g"; }

	   
	    public Map<String, Variable> variables = null;  
	    
	    public void initializeVariables(){
	        this.variables = new HashMap<String, Variable>();
	    } 
	    
	    public Map<String, Variable> getVariables(){
	        return this.variables;
	    }
	      
	    private IErrorReporter errorReporter = null;
	    public void setErrorReporter(IErrorReporter errorReporter) {
	        this.errorReporter = errorReporter;
	    }
	    
	    public void emitErrorMessage(String msg) {
	        errorReporter.reportError(msg);
	    }


	public static class parse_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "parse"

	public final PSParser.parse_return parse() throws RecognitionException {
		PSParser.parse_return retval = new PSParser.parse_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token i1=null;
		Token i2=null;
		Token string_literal1=null;
		Token char_literal2=null;
		Token string_literal3=null;
		Token EOF5=null;
		ParserRuleReturnScope t1 =null;
		ParserRuleReturnScope block4 =null;

		Object i1_tree=null;
		Object i2_tree=null;
		Object string_literal1_tree=null;
		Object char_literal2_tree=null;
		Object string_literal3_tree=null;
		Object EOF5_tree=null;
		RewriteRuleTokenStream stream_68=new RewriteRuleTokenStream(adaptor,"token 68");
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleTokenStream stream_Comma=new RewriteRuleTokenStream(adaptor,"token Comma");
		RewriteRuleTokenStream stream_72=new RewriteRuleTokenStream(adaptor,"token 72");
		RewriteRuleTokenStream stream_Identifier=new RewriteRuleTokenStream(adaptor,"token Identifier");
		RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");

		try {
			
			
			{
		
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==72) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					
					{
					string_literal1=(Token)match(input,72,FOLLOW_72_in_parse154);  
					stream_72.add(string_literal1);

					
					int cnt2=0;
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==67||LA2_0==69) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							
							{
							pushFollow(FOLLOW_type_in_parse159);
							t1=type();
							state._fsp--;

							stream_type.add(t1.getTree());
							i1=(Token)match(input,Identifier,FOLLOW_Identifier_in_parse163);  
							stream_Identifier.add(i1);


							                                   
							                                   String typ = (t1!=null?input.toString(t1.start,t1.stop):null);
							                                   String ident = (i1!=null?i1.getText():null);
							                                   if (variables.containsKey(ident)){
							                                            throw new RuntimeException("Variable duplicada");
							                                   }
							                                   Variable var = new Variable(ident, typ, null);
							                                   variables.put(ident, var);
							                                   
							                               
							
							loop1:
							while (true) {
								int alt1=2;
								int LA1_0 = input.LA(1);
								if ( (LA1_0==Comma) ) {
									alt1=1;
								}

								switch (alt1) {
								case 1 :
									
									{
									char_literal2=(Token)match(input,Comma,FOLLOW_Comma_in_parse177);  
									stream_Comma.add(char_literal2);

									i2=(Token)match(input,Identifier,FOLLOW_Identifier_in_parse181);  
									stream_Identifier.add(i2);


									                                  String typ2 = (t1!=null?input.toString(t1.start,t1.stop):null);
									                                  String ident2 = (i2!=null?i2.getText():null);
									                                  if (variables.containsKey(ident2)){
									                                            throw new RuntimeException("Variable duplicada");
									                                   }
									                                  Variable var2 = new Variable(ident2, typ2, null);
									                                  variables.put(ident2, var2);
									                              
									}
									break;

								default :
									break loop1;
								}
							}

							}
							break;

						default :
							if ( cnt2 >= 1 ) break loop2;
							EarlyExitException eee = new EarlyExitException(2, input);
							throw eee;
						}
						cnt2++;
					}

					string_literal3=(Token)match(input,68,FOLLOW_68_in_parse210);  
					stream_68.add(string_literal3);

					}
					break;

				default :
					break loop3;
				}
			}

			pushFollow(FOLLOW_block_in_parse216);
			block4=block();
			state._fsp--;

			stream_block.add(block4.getTree());
			EOF5=(Token)match(input,EOF,FOLLOW_EOF_in_parse218);  
			stream_EOF.add(EOF5);

			// AST REWRITE
			// elements: block
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 89:13: -> block
			{
				adaptor.addChild(root_0, stream_block.nextTree());
			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "parse"


	public static class block_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "block"
	
	public final PSParser.block_return block() throws RecognitionException {
		PSParser.block_return retval = new PSParser.block_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope statement6 =null;

		RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");

		try {
			
			{
			
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( ((LA4_0 >= Identifier && LA4_0 <= If)||LA4_0==Println||LA4_0==66||LA4_0==71) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					
					{
					pushFollow(FOLLOW_statement_in_block245);
					statement6=statement();
					state._fsp--;

					stream_statement.add(statement6.getTree());
					}
					break;

				default :
					break loop4;
				}
			}

			// AST REWRITE
			// elements: statement
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 93:20: -> ^( BLOCK ^( STATEMENTS ( statement )* ) )
			{
				
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(BLOCK, "BLOCK"), root_1);
				
				{
				Object root_2 = (Object)adaptor.nil();
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(STATEMENTS, "STATEMENTS"), root_2);
				
				while ( stream_statement.hasNext() ) {
					adaptor.addChild(root_2, stream_statement.nextTree());
				}
				stream_statement.reset();

				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "block"


	public static class type_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "type"
	
	public final PSParser.type_return type() throws RecognitionException {
		PSParser.type_return retval = new PSParser.type_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set7=null;

		Object set7_tree=null;

		try {
			
			{
			root_0 = (Object)adaptor.nil();


			set7=input.LT(1);
			if ( input.LA(1)==67||input.LA(1)==69 ) {
				input.consume();
				adaptor.addChild(root_0, (Object)adaptor.create(set7));
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "type"


	public static class statement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "statement"
	
	public final PSParser.statement_return statement() throws RecognitionException {
		PSParser.statement_return retval = new PSParser.statement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope assignment8 =null;
		ParserRuleReturnScope functionCall9 =null;
		ParserRuleReturnScope ifStatement10 =null;
		ParserRuleReturnScope buyStatement11 =null;
		ParserRuleReturnScope sellStatement12 =null;

		RewriteRuleSubtreeStream stream_assignment=new RewriteRuleSubtreeStream(adaptor,"rule assignment");

		try {
			
			int alt5=5;
			switch ( input.LA(1) ) {
			case Identifier:
				{
				alt5=1;
				}
				break;
			case Println:
				{
				alt5=2;
				}
				break;
			case If:
				{
				alt5=3;
				}
				break;
			case 66:
				{
				alt5=4;
				}
				break;
			case 71:
				{
				alt5=5;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
				
					{
					pushFollow(FOLLOW_assignment_in_statement319);
					assignment8=assignment();
					state._fsp--;

					stream_assignment.add(assignment8.getTree());
					// AST REWRITE
					// elements: assignment
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 103:18: -> assignment
					{
						adaptor.addChild(root_0, stream_assignment.nextTree());
					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_functionCall_in_statement333);
					functionCall9=functionCall();
					state._fsp--;

					adaptor.addChild(root_0, functionCall9.getTree());

					}
					break;
				case 3 :
				
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_ifStatement_in_statement340);
					ifStatement10=ifStatement();
					state._fsp--;

					adaptor.addChild(root_0, ifStatement10.getTree());

					}
					break;
				case 4 :
					
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_buyStatement_in_statement349);
					buyStatement11=buyStatement();
					state._fsp--;

					adaptor.addChild(root_0, buyStatement11.getTree());

					}
					break;
				case 5 :
				
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_sellStatement_in_statement356);
					sellStatement12=sellStatement();
					state._fsp--;

					adaptor.addChild(root_0, sellStatement12.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statement"


	public static class functionCall_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "functionCall"
	
	public final PSParser.functionCall_return functionCall() throws RecognitionException {
		PSParser.functionCall_return retval = new PSParser.functionCall_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Println13=null;
		Token char_literal14=null;
		Token char_literal16=null;
		ParserRuleReturnScope expression15 =null;

		Object Println13_tree=null;
		Object char_literal14_tree=null;
		Object char_literal16_tree=null;
		RewriteRuleTokenStream stream_Println=new RewriteRuleTokenStream(adaptor,"token Println");
		RewriteRuleTokenStream stream_OParen=new RewriteRuleTokenStream(adaptor,"token OParen");
		RewriteRuleTokenStream stream_CParen=new RewriteRuleTokenStream(adaptor,"token CParen");
		RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");

		try {
			
			
			{
			Println13=(Token)match(input,Println,FOLLOW_Println_in_functionCall374);  
			stream_Println.add(Println13);

			char_literal14=(Token)match(input,OParen,FOLLOW_OParen_in_functionCall376);  
			stream_OParen.add(char_literal14);

			
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==Bool||LA6_0==Excl||LA6_0==Identifier||LA6_0==Number||LA6_0==OParen||LA6_0==Subtract||LA6_0==70||(LA6_0 >= 73 && LA6_0 <= 74)) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					
					{
					pushFollow(FOLLOW_expression_in_functionCall378);
					expression15=expression();
					state._fsp--;

					stream_expression.add(expression15.getTree());
					}
					break;

			}

			char_literal16=(Token)match(input,CParen,FOLLOW_CParen_in_functionCall381);  
			stream_CParen.add(char_literal16);

			// AST REWRITE
			// elements: Println, expression
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 111:35: -> ^( FUNC_CALL Println expression )
			{
				
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNC_CALL, "FUNC_CALL"), root_1);
				adaptor.addChild(root_1, stream_Println.nextNode());
				adaptor.addChild(root_1, stream_expression.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "functionCall"


	public static class assignment_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "assignment"
	
	public final PSParser.assignment_return assignment() throws RecognitionException {
		PSParser.assignment_return retval = new PSParser.assignment_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Identifier17=null;
		Token char_literal18=null;
		ParserRuleReturnScope expression19 =null;

		Object Identifier17_tree=null;
		Object char_literal18_tree=null;
		RewriteRuleTokenStream stream_Assign=new RewriteRuleTokenStream(adaptor,"token Assign");
		RewriteRuleTokenStream stream_Identifier=new RewriteRuleTokenStream(adaptor,"token Identifier");
		RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");

		try {
			
			{
			Identifier17=(Token)match(input,Identifier,FOLLOW_Identifier_in_assignment412);  
			stream_Identifier.add(Identifier17);

			char_literal18=(Token)match(input,Assign,FOLLOW_Assign_in_assignment415);  
			stream_Assign.add(char_literal18);

			pushFollow(FOLLOW_expression_in_assignment417);
			expression19=expression();
			state._fsp--;

			stream_expression.add(expression19.getTree());
			// AST REWRITE
			// elements: Identifier, expression
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 115:33: -> ^( ASSIGNMENT Identifier expression )
			{
				
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ASSIGNMENT, "ASSIGNMENT"), root_1);
				adaptor.addChild(root_1, stream_Identifier.nextNode());
				adaptor.addChild(root_1, stream_expression.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "assignment"


	public static class ifStatement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "ifStatement"
	
	public final PSParser.ifStatement_return ifStatement() throws RecognitionException {
		PSParser.ifStatement_return retval = new PSParser.ifStatement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EndIf22=null;
		ParserRuleReturnScope ifStat20 =null;
		ParserRuleReturnScope elseStat21 =null;

		Object EndIf22_tree=null;
		RewriteRuleTokenStream stream_EndIf=new RewriteRuleTokenStream(adaptor,"token EndIf");
		RewriteRuleSubtreeStream stream_ifStat=new RewriteRuleSubtreeStream(adaptor,"rule ifStat");
		RewriteRuleSubtreeStream stream_elseStat=new RewriteRuleSubtreeStream(adaptor,"rule elseStat");

		try {
			
			{
			pushFollow(FOLLOW_ifStat_in_ifStatement447);
			ifStat20=ifStat();
			state._fsp--;

			stream_ifStat.add(ifStat20.getTree());
			
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==Else) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					
					{
					pushFollow(FOLLOW_elseStat_in_ifStatement449);
					elseStat21=elseStat();
					state._fsp--;

					stream_elseStat.add(elseStat21.getTree());
					}
					break;

			}

			EndIf22=(Token)match(input,EndIf,FOLLOW_EndIf_in_ifStatement452);  
			stream_EndIf.add(EndIf22);

			// AST REWRITE
			// elements: ifStat, elseStat
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 119:29: -> ^( IF ifStat ( elseStat )? )
			{
				
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(IF, "IF"), root_1);
				adaptor.addChild(root_1, stream_ifStat.nextTree());
				
				if ( stream_elseStat.hasNext() ) {
					adaptor.addChild(root_1, stream_elseStat.nextTree());
				}
				stream_elseStat.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "ifStatement"


	public static class ifStat_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "ifStat"
	
	public final PSParser.ifStat_return ifStat() throws RecognitionException {
		PSParser.ifStat_return retval = new PSParser.ifStat_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token If23=null;
		Token Then25=null;
		ParserRuleReturnScope expression24 =null;
		ParserRuleReturnScope block26 =null;

		Object If23_tree=null;
		Object Then25_tree=null;
		RewriteRuleTokenStream stream_Then=new RewriteRuleTokenStream(adaptor,"token Then");
		RewriteRuleTokenStream stream_If=new RewriteRuleTokenStream(adaptor,"token If");
		RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
		RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");

		try {
			
			{
			If23=(Token)match(input,If,FOLLOW_If_in_ifStat485);  
			stream_If.add(If23);

			pushFollow(FOLLOW_expression_in_ifStat487);
			expression24=expression();
			state._fsp--;

			stream_expression.add(expression24.getTree());
			Then25=(Token)match(input,Then,FOLLOW_Then_in_ifStat489);  
			stream_Then.add(Then25);

			pushFollow(FOLLOW_block_in_ifStat491);
			block26=block();
			state._fsp--;
